--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,18 +4,20 @@
   <script src="assets/css/custom.css" ref="stylesheet"></script>
   </head>
     <header class="homepage-header">
-      <h1 class="header-text">Insights from data</h1>
+      <h1 class="header-text"> Analyst for data driven companies with a background in anti-money laundering</h1>
     </header>
     <div class="content">
-     <h1 >Insights</h1>
 
-    {{ range .Site.RegularPages }}
-
-    <a class="" href="{{ .Permalink }}"style="text-decoration: none;">
-      <h3>{{.LinkTitle}}  </h3>
+    <h1>Insights</h1>
+    {{ range .Site.RegularPages}}
+    <a class="" href="{{ .RelPermalink }}"style="text-decoration: none;">
+      <h3>{{.Title}}  </h3>
     </a>
-
     {{end}}
+
+
+
+
     </div>
   </main>
-{{ end }}
+  {{ end }}
