--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -141,8 +141,15 @@ h1 {
 
 }
 
+.tag_list {
+  margin-top: 3px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
 
 
 
-
-
+.tag {
+  background-color: rgb(243 244 246);
+}
